--- a/server/public/assets/views/artist.html
+++ b/server/public/assets/views/artist.html
@@ -9,12 +9,20 @@
 <body>
     <form action="/artist" method="post">
         <div>
+            <label for="imageURL">Image URL:</label>
+            <input type="text" name="imageURL" id="imageURL"/>
+        </div>
+        <div>
             <label for="name">Name:</label>
             <input type="text" name="name" id="name"/>
         </div>
         <div>
             <label for="descript">Descript:</label>
             <input type="text" name="descript" id="descript"/>
+        </div>
+        <div>
+            <label for="tag">Tag:</label>
+            <input type="text" name="tag" id="tag"/>
         </div>
         <div>
             <input type="submit" value="Submit"/>
