--- a/server/public/assets/views/index.html
+++ b/server/public/assets/views/index.html
@@ -39,11 +39,14 @@
 
 <div>
     <img id="image-to-spin" src="https://www.casinobum.com/files/includes/images/images-wheel1.png">
-    <button class="button">Do you take a chance?</button>
+    <button class="button" onclick="showdiv()">Do you take a chance?</button>
 </div>
 
-<div>
-
+<div class="guide">
+<h3>What is Realm of Dusk?</h3>
+    <p>Realm of Dusk is a website that helps you approach music with the help of a trusty guide. It can be dangerous
+    out there, and if you're not careful you could find yourself lost in a twilight world of mediocrity and confusion.
+    Look ahead friend! My torch is lit. Let the adventure begin.</p>
 </div>
 
 <div>
@@ -54,7 +57,19 @@
 </div>
 
 
-    <div id="artistContainer"></div>
+<div id="artistContainer">
+    <div>
+        <img id="anImage" src="https://beatlesblogger.files.wordpress.com/2010/06/rutles-front-cover1.jpg"
+              alt="The Rutles"/>
+    </div>
+    <h2>Generic Artist</h2>
+    <h4>Random generic statements about artist.</h4>
+    <p>Here is a blurb about a random generic artist that provides a little bit of insight into who they are and what
+    they sound like as well as providing some trivia or humourous commentary. There will be links that mean you can jump
+    to another artist in the database and in this way it becomes a journey where you can choose many different paths.
+    Where you go is up to you but how you make that decision will be influence by the commentary which is on the
+    website.</p>
+</div>
 
 </body>
 </html>
